trunk/version-1-0/output
Traceback (most recent call last):
  File "controller.py", line 4, in <module>
    from source import Firewall
  File "/home/debian-moises/Documentos/securityproject/trunk/version-1-0/source.py", line 12, in <module>
    from databasemodel import DatabaseModel
  File "/home/debian-moises/Documentos/securityproject/trunk/version-1-0/databasemodel.py", line 189
    else:
       ^
SyntaxError: invalid syntax
